@@ -55,8 +55,10 @@ run_cmd
 
 # Build and run tests with hadoop20. This must happen afterwards so test results
 # are available for CI to publish.
-cmd='ant -Dtest.junit.output.format=xml clean releaseaudit package test'
+cmd="ant -Dtest.junit.output.format=xml -Dforrest.home=${FORREST_HOME} clean releaseaudit package test"
 if [ "${HUDSON_URL}" == "https://builds.apache.org/" ]; then
   cmd="${cmd} mvn-deploy"
+elif [ "${HCAT_MVN_DEPLOY}" == "true" ]; then
+  cmd="${cmd} mvn-deploy-signed"
 fi
 run_cmd
