@@ -15,7 +15,7 @@
 # specific language governing permissions and limitations
 # under the License.
 
-hcatalog.version=0.6.0-SNAPSHOT
+hcatalog.version=1.0-gates
 jar.name=${ant.project.name}-${hcatalog.version}.jar
 hcatalog.jar=${ant.project.name}-${hcatalog.version}.jar
 hcatalog.core.jar=${ant.project.name}-core-${hcatalog.version}.jar
