@@ -51,7 +51,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.apache.hcatalog</groupId>
   <artifactId>hcatalog</artifactId>
-  <version>0.6.0-SNAPSHOT</version>
+  <version>1.0-gates</version>
   <packaging>pom</packaging>
 
   <build>
